--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -1,16 +1,28 @@
-// http://ionicframework.com/docs/theming/
+/*********** 背景色 start **********/
+.primary-bg {
+    background-color: color($colors, primary)!important;
+    .toolbar {
+      .toolbar-background {
+        background-color: color($colors, primary)!important;
+      }
+      .toolbar-title{
+        color: color($colors, light)!important;
+      }
+    } 
+}
+/*********** 背景色 end **********/
 
-
-// App Global Sass
-// --------------------------------------------------
-// Put style rules here that you want to apply globally. These
-// styles are for the entire app and not just one component.
-// Additionally, this file can be also used as an entry point
-// to import other Sass files to be included in the output CSS.
-//
-// Shared Sass variables, which can be used to adjust Ionic's
-// default Sass variables, belong in "theme/variables.scss".
-//
-// To declare rules for a specific mode, create a child rule
-// for the .md, .ios, or .wp mode classes. The mode class is
-// automatically applied to the <body> element in the app.
+/***** segment颜色定制 start *********/
+.segment-md .segment-button {
+  color: color($colors, gray) !important;
+}
+.segment-md .segment-button.segment-activated {
+  color: color($colors, primary) !important;
+  font-weight: bold;
+  .bolder-sm{
+      border: 5px solid color($colors, primary);
+      width: 20px;
+      margin: 0 auto;
+  }
+}
+/***** segment颜色定制 end ********/
