--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -34,11 +34,13 @@ $app-direction: ltr;
 // The "primary" color is the only required color in the map.
 
 $colors: (
-  primary:    #488aff,
-  secondary:  #32db64,
+  primary:    #fc4d6e,
+  secondary:  #fd6f89,
   danger:     #f53d3d,
-  light:      #f4f4f4,
-  dark:       #222
+  light:      #FFFAFA,
+  dark:       #655A5B,
+  gray:       #B3A3A3,
+  light-gray: #d9d9d9
 );
 
 
@@ -86,3 +88,11 @@ $colors: (
 
 @import "roboto";
 @import "noto-sans";
+
+$font-family-base: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+$toolbar-ios-background: color($colors, light);
+$hairlines-width: 1px;
+$list-border-color: color($colors, light-gray);
+
+$segment-button-md-border-bottom-width: 0px;
+$segment-button-md-font-size: 1.4rem;
